# trading_network_platform

./: .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml  trading_network_data.json
config/: celery.py  settings.py  urls.py
docs_eng/: README.md
products/: admin.py  models.py  paginators.py  urls.py  validators.py
products/api_views/: api_product.py
products/migrations/: 0001_initial.py  0002_alter_product_product_model_and_more.py
products/serializers/: product.py
trading_networks/: __init__.py  admin.py  apps.py  models.py  paginators.py  permissions.py  tasks.py  urls.py  utils.py  validators.py
trading_networks/api_views/: api_network.py
trading_networks/migrations/: 0001_initial.py  0002_initial.py  0003_alter_network_network_name.py
trading_networks/serializers/: network.py
trading_networks/static/admin/css/: custom_admin_styles.css
trading_networks/static/admin/js/: copy_email.js
users/: admin.py  models.py  permissions.py  urls.py
users/api_views/: api_user.py
users/management/commands/: csu.py
users/migrations/: 0001_initial.py
users/serializers/: user.py
